<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NIDVerification">

    <TextView
        android:id="@+id/tv_nid_verification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:fontFamily="@font/sfprotextbold"
        android:gravity="center"
        android:text="@string/nid_verification"
        android:textColor="#090909"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageView_front_side_nid"
        android:layout_width="@dimen/dp_0"
        android:layout_height="@dimen/dp_204"
        android:layout_marginStart="25dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/view_font_side_drawable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_nid_verification" />

    <TextView
        android:id="@+id/tv_front_side_nid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:fontFamily="@font/sfprotextregular"
        android:gravity="center"
        android:text="@string/front_side_of_nid"
        android:textColor="#707070"
        android:textSize="@dimen/sp_16"
        app:layout_constraintEnd_toEndOf="@id/imageView_front_side_nid"
        app:layout_constraintStart_toStartOf="@id/imageView_front_side_nid"
        app:layout_constraintTop_toTopOf="@id/imageView_front_side_nid" />

    <View
        android:id="@+id/view_take_photo_front_side"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="37dp"
        android:layout_marginTop="47dp"
        android:background="@drawable/view_take_photo_drawable"
        app:layout_constraintEnd_toEndOf="@id/imageView_front_side_nid"
        app:layout_constraintStart_toStartOf="@id/imageView_front_side_nid"
        app:layout_constraintTop_toBottomOf="@id/tv_front_side_nid" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <ImageView
        android:id="@+id/imageView_capture_front_side"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="29.5dp"
        android:src="@drawable/capture"
        app:layout_constraintBottom_toBottomOf="@id/view_take_photo_front_side"
        app:layout_constraintEnd_toStartOf="@id/guideline"
        app:layout_constraintTop_toTopOf="@id/view_take_photo_front_side"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tv_take_photo_front_side"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:fontFamily="@font/sfprotextbold"
        android:gravity="center"
        android:text="@string/take_photo"
        android:textColor="#090909"
        android:textSize="@dimen/sp_16"
        app:layout_constraintBottom_toBottomOf="@id/view_take_photo_front_side"
        app:layout_constraintStart_toEndOf="@id/imageView_capture_front_side"
        app:layout_constraintTop_toTopOf="@id/view_take_photo_front_side" />


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageView_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/cancel"
        android:translationX="5dp"
        android:translationY="-5dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@id/imageView_front_side_nid"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="@id/imageView_front_side_nid"
        app:layout_constraintTop_toTopOf="@id/imageView_front_side_nid"
        />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageView_back_side_nid"
        android:layout_width="@dimen/dp_0"
        android:layout_height="@dimen/dp_204"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/view_font_side_drawable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView_front_side_nid" />

    <TextView
        android:id="@+id/tv_back_side_nid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:fontFamily="@font/sfprotextregular"
        android:gravity="center"
        android:text="@string/back_side_of_nid"
        android:textColor="#707070"
        android:textSize="@dimen/sp_16"
        app:layout_constraintEnd_toEndOf="@id/imageView_back_side_nid"
        app:layout_constraintStart_toStartOf="@id/imageView_back_side_nid"
        app:layout_constraintTop_toTopOf="@id/imageView_back_side_nid" />


    <View
        android:id="@+id/view_take_photo_back_side"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="37dp"
        android:layout_marginTop="47dp"
        android:background="@drawable/view_take_photo_drawable"
        app:layout_constraintEnd_toEndOf="@id/imageView_back_side_nid"
        app:layout_constraintStart_toStartOf="@id/imageView_back_side_nid"
        app:layout_constraintTop_toBottomOf="@id/tv_back_side_nid" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <ImageView
        android:id="@+id/imageView_capture_back_side"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="29.5dp"
        android:src="@drawable/capture"
        app:layout_constraintBottom_toBottomOf="@id/view_take_photo_back_side"
        app:layout_constraintEnd_toStartOf="@id/guideline2"
        app:layout_constraintTop_toTopOf="@id/view_take_photo_back_side"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tv_take_photo_back_side"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:fontFamily="@font/sfprotextbold"
        android:gravity="center"
        android:text="@string/take_photo"
        android:textColor="#090909"
        android:textSize="@dimen/sp_16"
        app:layout_constraintBottom_toBottomOf="@id/view_take_photo_back_side"
        app:layout_constraintStart_toEndOf="@id/imageView_capture_back_side"
        app:layout_constraintTop_toTopOf="@id/view_take_photo_back_side" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageView_cancel_back_side"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/cancel"
        android:translationX="5dp"
        android:translationY="-5dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@id/imageView_back_side_nid"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="@id/imageView_back_side_nid"
        app:layout_constraintTop_toTopOf="@id/imageView_back_side_nid" />

    <Button
        android:id="@+id/btn_next"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="27dp"
        android:layout_marginBottom="58dp"
        android:alpha=".5"
        android:backgroundTint="#00C806"
        android:fontFamily="@font/sfprotextregular"
        android:text="@string/next"
        android:textColor="#000000"
        android:textSize="@dimen/sp_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_or_upload_nid"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sfprotextbold"
        android:gravity="center"
        android:text="@string/or_upload_nid"
        android:textColor="#000000"
        android:textSize="@dimen/sp_16"
        app:layout_constraintBottom_toTopOf="@id/btn_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView_back_side_nid" />
</androidx.constraintlayout.widget.ConstraintLayout>